--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="section">
       <h3>Funding & Use of Funds</h3>
-      <p>We seek PKR 15 million to develop technology, onboard expert agronomists, and market the platform. Funds allocation: technology & data (45%), content & partnerships (25%), marketing (20%), operations (10%).</p>
+      <p>We seek 2Lacs PKR to develop technology, onboard expert agronomists, and market the platform. Funds allocation: technology & data (45%), content & partnerships (25%), marketing (20%), operations (10%).</p>
     </div>
 
     <div class="section">
